Fixed up spacing of item field labels, per Maureen email 1/27/11 part RR.

--- a/dspace-xmlui/dspace-xmlui-webapp/src/main/webapp/static/css/osukb_base.css
+++ b/dspace-xmlui/dspace-xmlui-webapp/src/main/webapp/static/css/osukb_base.css
@@ -804,8 +804,8 @@ td.field-label {
     text-align: right;
     font-weight: bold;
     vertical-align: top;
-    width: 10em;
-    padding: 5px;
+    width: 11em;
+    padding: 3px;
 }
 td.field-data {
     padding: 3px;
@@ -814,8 +814,8 @@ td.detail-field-label {
     text-align: right;
     font-weight: bold;
     vertical-align: top;
-    width: 10em;
-    padding: 5px;
+    width: 11em;
+    padding: 3px;
 }
 td.detail-field-data {
     padding: 3px;
